# auto-dft

./: README.md
app/: Dockerfile  pyproject.toml  webapp.py
app/auto-dft-nextjs/: .gitignore  middleware.ts  next.config.ts  package-lock.json  package.json  rep_of_cluster_1.sdf  server.ts  tsconfig.json  tsconfig.server.json
app/auto-dft-nextjs/app/: layout.tsx  page.tsx
app/auto-dft-nextjs/app/api/: list-files.ts
app/auto-dft-nextjs/app/api/auth/login/: route.ts
app/auto-dft-nextjs/app/api/auth/logout/: route.ts
app/auto-dft-nextjs/app/api/auth/verify/: route.ts
app/auto-dft-nextjs/app/api/files/[...path]/: route.ts
app/auto-dft-nextjs/app/api/files/list/: route.ts
app/auto-dft-nextjs/app/api/jobs/: route.ts
app/auto-dft-nextjs/app/api/jobs/[jobId]/: route.ts
app/auto-dft-nextjs/app/api/jobs/[jobId]/download/: route.ts
app/auto-dft-nextjs/app/api/jobs/submit/: route.ts
app/auto-dft-nextjs/app/api/run-opt/: route.ts
app/auto-dft-nextjs/app/components/: FileReaderComponent.tsx  Header.tsx  MoleculeViewer.tsx  Sidebar.tsx
app/auto-dft-nextjs/app/jobs/: page.tsx
app/auto-dft-nextjs/app/jobs/[jobId]/: page.tsx
app/auto-dft-nextjs/app/login/: page.tsx
app/auto-dft-nextjs/components/ui/: sidebar.tsx
app/auto-dft-nextjs/lib/: auth.ts  db.ts  worker.ts
app/auto-dft-nextjs/prisma/: schema.prisma
app/auto-dft-nextjs/prisma/migrations/20250611070116_init/: migration.sql
app/auto-dft-nextjs/uploads/: job15.xyz  job4.sdf  job4.xyz  job5.sdf  job5.xyz  job8.sdf  job8.xyz
app/autodft/: app.py
app/db/: jobs.db  jobs.db-journal
